# opencl-demo

./: CMakeLists.txt  HelloWorld.cl  LargeLoops.cl  NumericalReduction.cl  ProcessArray.cl  ProcessMultiArray.cl  README.md  main.cpp
